<resources>
    <string name="app_name">Метролог</string>
    <string name="app_version_title">Версия приложения: %s</string>
    <string name="login_activity_app_title">Мобильный метролог</string>
    <string name="no_data">Нет данных</string>
    <string name="save_title">Сохранить</string>
    <string name="search_title">Поиск</string>
    <string name="exit_message">Нажмите еще раз для выхода</string>
    <string name="login_activity_user_name_hint">Имя пользователя</string>
    <string name="login_activity_password_hint">Пароль</string>
    <string name="login_activity_remember_me_checkbox_title">Запомнить меня</string>
    <string name="login_activity_sign_in_title">Войти</string>
    <string name="login_activity_settings_title">Настройки</string>
    <string name="settings_activity_title">Настройки</string>
    <string name="settings_activity_connect_header">Соединение с сервером</string>
    <string name="settings_activity_ip_address_title">Параметры подключения</string>
    <string name="settings_activity_ip_address_default_value">http://192.168.0.107:8008/cno/mobileAPI/</string>
    <string name="settings_activity_fingerprint_title">Вход по отпечатку пальца</string>
    <string name="settings_activity_change_user_title">Сменить пользователя</string>
    <string name="settings_activity_about_app">О приложении</string>
    <string name="settings_activity_event_log_write_title">Запись данных</string>
    <string name="settings_activity_event_log_export_title">Экспорт данных</string>
    <string name="settings_activity_equip_document_pdf_title">PDF документ оборудования</string>
    <string name="settings_activity_pdf_image_size_title">Размер изображения</string>
    <string name="settings_activity_phoho_comment_title">Фотофиксация мероприятия</string>
    <string name="settings_activity_image_format_title">Формат изображения</string>
    <string name="settings_activity_image_size_title">Размер изображения</string>
    <string name="settings_activity_image_quality_title">Качество изображения</string>
    <string name="pin_activity_input_pin_code">Введите пин код</string>
    <string name="pin_activity_input_pin_code_again">Введите пин код еще раз</string>
    <string name="pin_activity_pins_not_valid">Пароли не совпадают. Попробуйте еще раз.</string>
    <string name="pin_activity_pin_not_valid_last_try">Введен неправильный PIN код. Последняя попытка</string>
    <string name="pin_activity_pin_not_valid_attempts_left">Введен неправильный PIN код. Осталось %s попытки</string>
    <string name="pin_activity_pin_reset_log_in_again">PIN код сброшен. Авторизуйтесь заново.</string>
    <string name="pin_activity_dialog_title">Забыли код доступа?</string>
    <string name="pin_activity_dialog_text">Нажмите кнопку выйти, чтобы сбросить старый код доступа и создать новый</string>
    <string name="pin_activity_dialog_positive_button">Выйти</string>
    <string name="pin_activity_dialog_negative_button">Отмена</string>
    <string name="prompt_info_title">Вход в АРМ Метролога</string>
    <string name="prompt_info_description">Отсканируйте отпечаток пальца</string>
    <string name="bottom_menu_events_title">Мероприятия</string>
    <string name="bottom_menu_requests_title">Заявки</string>
    <string name="bottom_menu_events_equip">Оборудование</string>
    <string name="bottom_menu_events_chat">Чат</string>
    <string name="bottom_menu_more_title">Еще</string>
    <string name="bottom_menu_settings_title">Настройки</string>
    <string name="equip_ZavNum_label">Заводской номер:</string>
    <string name="equip_search_bar_hint">Поиск оборудования</string>
    <string name="equip_RFIDlabel">Метка:</string>
    <string name="equip_Tag_label">Тэг:</string>
    <string name="equip_GRSI_label">ГРСИ:</string>
    <string name="equip_Manufacturer_label">Изготовитель:</string>
    <string name="equip_Metering_Type_label">Вид измерений:</string>
    <string name="equip_Calibration_label">Калибровка:</string>
    <string name="equip_Verification_label">Поверка:</string>
    <string name="equip_Installation_Location_label">Место установки:</string>
    <string name="equip_add_rfid_label">Добавить метку</string>
    <string name="equip_create_document_label">Создать PDF</string>
    <string name="nfc_activity_title">Сканирование метки</string>
    <string name="nfc_activity_read_nfc_text">Сканирование RFID метки</string>
    <string name="nfc_activity_todo_text">Поднесите устройство к метке</string>
    <string name="nfc_label_not_defined_text">Метка не определена</string>
    <string name="nfc_tag_detected">Обнаружена RFID метка</string>
    <string name="nfc_serial_number_message">Серийный номер: </string>
    <string name="nfc_tag_is_set">Метка %s установлена</string>
    <string name="nfc_tag_set_error">При установке метки возникла ошибка</string>
    <string name="nfc_tag_set_failure">Метка %s принадлежит другому оборудованию. Выберите другую метку.</string>
    <string name="nfc_tag_get_equip_failure">Оборудование по метке %s не найдено</string>
    <string name="nfc_tag_get_equip_error">При поиске оборудования возникла ошибка</string>
    <string name="request_search_bar_hint">Поиск заявок</string>
    <string name="request_no_equip">Оборудование не найдено</string>
    <string name="request_no_operation_type">Тип операции не определен</string>
    <string name="request_no_discipline_type">Дисциплина не определена</string>
    <string name="equip_document_activity_document_type_spinner_hint">Тип документа</string>
    <string name="equip_document_activity_save_pdf_button_title">Создать документ</string>
    <string name="no_support_camera_message">Ваше устройство не поддерживает работу с камерой</string>
    <string name="no_permission_camera_message">Нет разрешения на работу с камерой</string>
    <string name="equip_document_activity_delete_image_dialog_title">Удаление изображения</string>
    <string name="equip_document_activity_delete_image_dialog_text">Выбранное фото/изображение будет удалено. Продолжить?</string>
    <string name="equip_document_activity_delete_image_dialog_positive_button">Удалить</string>
    <string name="pequip_document_activity_delete_image_dialog_negative_button">Отмена</string>
    <string name="equip_document_activity_pdf_view_dialog_title">PDF</string>
    <string name="equip_document_activity_pdf_view_dialog_text">"Создан %s для %s"</string>
    <string name="equip_document_activity_pdf_view_dialog_positive_button">Просмотр</string>
    <string name="pequip_document_activity_pdf_view_dialog_negative_button">Выйти</string>
    <string name="filter_title">Фильтр</string>
    <string name="period_title">Период:</string>
    <string name="status_title">Статус</string>
    <string name="apply_title">Применить</string>
    <string name="discipline_title">Дисциплина</string>
    <string name="no_chosen_filter_title">Не выбрано</string>
    <string name="date_range_placeholder">%s - %s</string>
    <string name="bottom_dialog_scanner_title">Сканер</string>
    <string name="bottom_dialog_no_scanner_title">Без сканирования</string>
    <string name="add_request_title">Заявка</string>
    <string name="add_request_type_title">Срочная</string>
    <string name="add_request_category_title">Тип заявки</string>
    <string name="add_request_discipline_title">Дисциплина</string>
    <string name="add_request_operation_title">Мероприятие</string>
    <string name="add_request_comment_title">Описание заявки</string>
    <string name="add_request_priority_title">Приоритет</string>
    <string name="add_request_no_equip_message_title">Выбран режим БЕЗ сканирования. В этом случае заявка будет оформлена без привязки к оборудованию</string>
    <string name="add_request_need_priority_title">Необходимо выбрать приоритет</string>
    <string name="add_request_need_category_title">Необходимо выбрать тип заявки</string>
    <string name="add_request_need_discipline_title">Необходимо выбрать дисциплину</string>
    <string name="add_request_need_operation_title">Необходимо выбрать мероприятие</string>
    <string name="add_request_success_title">Заявка добавлена</string>
    <string name="add_equip_info_need_comment_title">Для добавления информации для ТО описание необходимо заполнить</string>
    <string name="add_equip_info_need_equip_title">Добавление приоритетной информации для ТО возможно только для оборудования, оснащенного меткой</string>
    <string name="add_equip_info_success_title">Информация добавлена</string>
    <string name="event_equip_ZavNum_label">Заводской номер:</string>
    <string name="event_type_label">Тип мероприятия:</string>
    <string name="event_plan_date_label">Запланировано:</string>
    <string name="event_plan_date_label_in_work">Выполняется:</string>
    <string name="event_fact_date_label_pause">Отложено:</string>
    <string name="event_fact_date_label_complete">Выполнено:</string>
    <string name="event_fact_date_label_cancel">Отменено:</string>
    <string name="event_comment_label_title">Комментарий:</string>
    <string name="select_event_title">Список мероприятий</string>
    <string name="select_event_no_data_title">По данному оборудованию мероприятий не найдено</string>
    <string name="select_event_plan_date_title">Запланировано:</string>
    <string name="select_event_type_title">Тип мероприятия:</string>
    <string name="select_event_type_planned_title">Плановое</string>
    <string name="select_event_type_unscheduled_title">Внеплановое</string>
    <string name="select_event_high_priority_title">Завершите начатое мероприятие с высоким приоритетом.</string>
    <string name="operation_activity_title">Мероприятие</string>
    <string name="operation_activity_begin_event_button">Начать мероприятие</string>
    <string name="operation_activity_pause_event_button_work_state">Остановить выполнение мероприятия</string>
    <string name="operation_activity_pause_event_button_pause_state">Продолжить выполнение мероприятия</string>
    <string name="operation_activity_complete_event_button">Закончить мероприятие</string>
    <string name="operation_activity_complete_event_operations_button">Завершить все операции мероприятия без операционного контроля</string>
    <string name="operation_activity_cancel_event_button">Отменить выполнение мероприятия</string>
    <string name="operation_activity_control_button_title">Управление</string>
    <string name="operation_activity_equip_name">Название оборудования</string>
    <string name="operation_activity_name">Название ТО</string>
    <string name="operation_activity_menu_begin_event_button">Начать мероприятие</string>
    <string name="operation_activity_menu_pause_event_button_work_state">Остановить мероприятие</string>
    <string name="operation_activity_menu_pause_event_button_pause_state">Продолжить мероприятие</string>
    <string name="operation_activity_menu_complete_event_button">Закончить мероприятие</string>
    <string name="operation_activity_menu_cancel_event_button">Отменить мероприятие</string>
    <string name="operation_activity_equip_ZavNum_label">Заводской номер:</string>
    <string name="operation_activity_event_type_label">Тип мероприятия:</string>
    <string name="operation_activity_event_plan_date_label">Запланировано:</string>
    <string name="operation_activity_operations_label">Список операций</string>
    <string name="operation_activity_empty_operations_list">Список операций пуст</string>
    <string name="operation_activity_operations_list_title">Список операций</string>
    <string name="operation_activity_complete_event_error">Для выполнения мероприятия необходимо выполнить все операции</string>
    <string name="operation_activity_start_event_error">Для начала выполнения мероприятия необходимо считать метку оборудования</string>
    <string name="operation_activity_start_event_equip_error">Считанная метка не принадлежит данному мероприятию. Начать мероприятие невозможно</string>
</resources>