<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_baseline_event_note_24"
        android:title="@string/bottom_menu_events_title" />

    <item
        android:id="@+id/navigation_requests"
        android:icon="@drawable/ic_baseline_requests_24"
        android:title="@string/bottom_menu_requests_title" />

    <item
        android:id="@+id/navigation_equip"
        android:icon="@drawable/ic_equip_red_24dp"
        android:title="@string/bottom_menu_events_equip" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_baseline_chat_bubble_outline_24"
        android:title="@string/bottom_menu_events_chat" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/bottom_menu_settings_title" />

</menu>