<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_activity_connect_header">

        <EditTextPreference
            android:defaultValue="http://192.168.0.107:8008/cno/mobileAPI/"
            android:key="server_ip_address"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_activity_ip_address_title"
            app:icon="@drawable/ic_cast_connect_black_36dp"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="auth_tools_category"
        app:title="Безопасность">

        <SwitchPreference
            android:key="auth_mode"
            android:summaryOff="Биометрия выключена"
            android:summaryOn="Биометрия включена"
            app:icon="@drawable/ic_fingerprint_36"
            app:title="@string/settings_activity_fingerprint_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="Журналы работы">
        <SwitchPreference
            android:key="event_log_switch"
            android:summaryOff="Запись выключена"
            android:summaryOn="Запись включена"
            app:icon="@drawable/ic_database_import_red_24dp"
            app:title="@string/settings_activity_event_log_write_title" />

        <Preference
            android:key="save_event_log"
            android:title="@string/settings_activity_event_log_export_title"
            app:icon="@drawable/ic_database_export_red_36dp" />
    </PreferenceCategory>
    <PreferenceCategory app:title="База данных">
        <Preference
            android:key="backup_database_button"
            android:title="Резервное копирование базы данных"
            app:icon="@drawable/ic_database_export_red_36dp"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="Учетная запись">
        <Preference
            android:key="change_user_button"
            android:title="@string/settings_activity_change_user_title"
            app:icon="@drawable/ic_baseline_people_black_36dp" />
    </PreferenceCategory>

    <PreferenceCategory app:title="Информация">
        <Preference
            android:key="change_log_button"
            android:title="@string/settings_activity_about_app"
            app:icon="@drawable/ic_outline_info_36" />
    </PreferenceCategory>
</PreferenceScreen>