<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/equipCardView"
    style="@style/CardView.Light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    tools:ignore="ContentDescription">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/equipTagActualImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/equipNameTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/equipNameTextView"
            app:srcCompat="@drawable/ic_baseline_check_circle_black_24dp"
            app:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/equipLocationLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/equip_Installation_Location_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/equipTagTextView" />

        <TextView
            android:id="@+id/equipLocationTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/equipZavNumLabelTextView"
            app:layout_constraintTop_toBottomOf="@+id/equipTagTextView"
            tools:text="TextView" />

        <TextView
            android:id="@+id/equipGRSITextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/equipTagActualImageView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/equipZavNumLabelTextView"
            app:layout_constraintTop_toBottomOf="@+id/equipLocationTextView"
            tools:text="TextView" />

        <TextView
            android:id="@+id/equipManufacturerLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/equip_Manufacturer_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/equipGRSITextView" />

        <TextView
            android:id="@+id/equipManufacturerTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/equipTagActualImageView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/equipZavNumLabelTextView"
            app:layout_constraintTop_toBottomOf="@+id/equipGRSITextView"
            tools:text="TextView" />

        <TextView
            android:id="@+id/equipMeteringTypeLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/equip_Metering_Type_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/equipManufacturerTextView" />

        <TextView
            android:id="@+id/equipMeteringTypeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/equipTagActualImageView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/equipZavNumLabelTextView"
            app:layout_constraintTop_toBottomOf="@+id/equipManufacturerTextView"
            tools:text="TextView" />

        <TextView
            android:id="@+id/equipCalibrationLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/equip_Calibration_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/equipMeteringTypeTextView" />

        <TextView
            android:id="@+id/equipCalibrationTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/equipTagActualImageView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/equipZavNumLabelTextView"
            app:layout_constraintTop_toBottomOf="@+id/equipMeteringTypeTextView"
            tools:text="TextView" />

        <TextView
            android:id="@+id/equipVerificationLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/equip_Verification_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/equipCalibrationTextView" />

        <TextView
            android:id="@+id/equipVerificationTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/equipTagActualImageView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/equipZavNumLabelTextView"
            app:layout_constraintTop_toBottomOf="@+id/equipCalibrationTextView"
            tools:text="TextView" />

        <TextView
            android:id="@+id/equipGRSILabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/equip_GRSI_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/equipLocationTextView" />

        <TextView
            android:id="@+id/equipTagTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/equipTagLabelTextView"
            app:layout_constraintStart_toEndOf="@+id/equipZavNumLabelTextView"
            app:layout_constraintTop_toTopOf="@+id/equipTagLabelTextView"
            tools:text="TextView" />

        <TextView
            android:id="@+id/equipTagLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/equip_Tag_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/equipRFIDTextView" />

        <TextView
            android:id="@+id/equipNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="TextView"
            android:textColor="@color/colorPrimaryTextDefaultMaterialLight"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/equipTagActualImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/equipZavNumLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/equip_ZavNum_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/equipNameTextView" />

        <TextView
            android:id="@+id/equipZavNumTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/equipTagActualImageView"
            app:layout_constraintStart_toEndOf="@+id/equipZavNumLabelTextView"
            app:layout_constraintTop_toTopOf="@+id/equipZavNumLabelTextView"
            tools:text="TextView" />

        <TextView
            android:id="@+id/equipRFIDLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/equip_RFIDlabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/equipZavNumTextView" />

        <TextView
            android:id="@+id/equipRFIDTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/equipRFIDLabelTextView"
            app:layout_constraintEnd_toEndOf="@+id/equipNameTextView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/equipZavNumTextView"
            app:layout_constraintTop_toTopOf="@+id/equipRFIDLabelTextView"
            tools:text="TextView" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="@+id/equipZavNumTextView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/equipNameTextView"
            app:layout_constraintTop_toBottomOf="@+id/equipVerificationTextView" />

        <Button
            android:id="@+id/addRFIDButton"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            tools:text="Добавить метку" />

        <Button
            android:id="@+id/createDocumentButton"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/addRFIDButton"
            app:layout_constraintEnd_toEndOf="@+id/divider"
            app:layout_constraintTop_toTopOf="@+id/addRFIDButton"
            tools:text="Создать PDF" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>